@@ -6,7 +6,7 @@
       <owner>conglomerate</owner>
       <type>list</type>
       <list_type>string</list_type>
-      <default>[~/.conglomerate/dispspecs,@datadir@/@PACKAGE@/dispspecs]</default>
+      <default>[~/.conglomerate/dispspecs,/bugzilla/129776,/usr/share/@PACKAGE@/dispspecs,/usr/local/share/@PACKAGE@/dispspecs,/opt/share/@PACKAGE@/dispspecs]</default>
       <locale name="en">
 	<short>Locations for display specification files.</short>
 	<long>A list of directories where Conglomerate should look for the display specification (called dispspec, or .xds) files.  When documents are loaded a matching dispspec is searched for in these directories, and the first matching dispspec file is used.</long>
@@ -18,7 +18,7 @@
       <owner>conglomerate</owner>
       <type>list</type>
       <list_type>string</list_type>
-      <default>[~/.conglomerate/templates,@datadir@/@PACKAGE@/templates]</default>
+      <default>[~/.conglomerate/templates,/bugzilla/129776,/usr/share/@PACKAGE@/templates,/usr/local/share/@PACKAGE@/templates,/opt/share/@PACKAGE@/templates]</default>
       <locale name="en">
 	<short>Locations for template files.</short>
 	<long>A list of directories where Conglomerate should look for template xml files.  These documents will be used by the new document druid as types of documens which can be created by the user.</long>
