@@ -1,3 +1,10 @@
+2004-01-02  Geert Stappers <stappers@stappers.nl>
+
+	* conglomerate.schemas.in
+
+	Less harmfull package data diretory expansion,
+	see bugzilla #129776 for details.
+
 2003-12-21  Geert Stappers <stappers@stappers.nl>
 
 	* conglomerate.schemas.in
